force-app/main/default/objects/Crossword_Clue_Answer_Pair__c/Crossword_Clue_Answer_Pair__c.object-meta.xml
<CustomObject>
    <label>Crossword Clue-Answer Pair</label>
    <nameField>
        <displayFormat>CAP-{0000}</displayFormat>
        <label>Clue-Answer Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clue-Answer Pairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>