force-app/main/default/objects/Crossword_Clue_Answer_Pair__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>