force-app/main/default/objects/Crossword_Clue_Answer_Pair__c/fields/Answer_ID__c.field-meta.xml
<CustomField>
    <fullName>Answer_ID__c</fullName>
    <label>Answer ID</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>