force-app/main/default/objects/Crossword_Clue_Answer_Pair__c/fields/Top__c.field-meta.xml
<CustomField>
    <fullName>Top__c</fullName>
    <label>Top</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>